Conecção com banco de dados, Criação das migrations

--- a/FinancialApp.Users/appsettings.json
+++ b/FinancialApp.Users/appsettings.json
@@ -8,7 +8,6 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"UserConnection": "INSERTCONNECTIONSTRING"
-    //"AzureConnection": "INSERTCONNECTIONSTRING"
+    "UserConnection": "Server=tcp:facillita-prod.database.windows.net,1433;Initial Catalog=Facillita;Persist Security Info=False;User ID=DevSA;Password=u%s9E3V&EX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
   }
 }
