--- a/FinancialApp.API/appsettings.json
+++ b/FinancialApp.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"FinancialConnection": "INSERTCONNECTIONSTRING"
+    "Facillita": "Server=tcp:facillita-prod.database.windows.net,1433;Initial Catalog=Facillita;Persist Security Info=False;User ID=DevSA;Password=u%s9E3V&EX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
   }
 }
