--- a/FinancialApp.API/Properties/launchSettings.json
+++ b/FinancialApp.API/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "FinancialApp.API": {
+    "Facillita.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
