--- a/FinancialApp.Tests/Facillita.Tests.csproj
+++ b/FinancialApp.Tests/Facillita.Tests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FinancialApp.API\FinancialApp.API.csproj" />
+    <ProjectReference Include="..\FinancialApp.API\Facillita.API.csproj" />
   </ItemGroup>
 
 </Project>
