--- a/FinancialApp.Users/Properties/launchSettings.json
+++ b/FinancialApp.Users/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "FinancialApp.Users": {
+    "Facillita.Users": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
@@ -17,7 +17,7 @@
       "applicationUrl": "https://localhost:7093;http://localhost:5093",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "VaultUri": "https://financialappusersvault.vault.azure.net/",
+        "VaultUri": "https://Facillitausersvault.vault.azure.net/",
         "AZURE_USERNAME": "duiliomurai@gmail.com"
       }
     },
@@ -27,7 +27,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "VaultUri": "https://financialappusersvault.vault.azure.net/",
+        "VaultUri": "https://Facillitausersvault.vault.azure.net/",
         "AZURE_USERNAME": "duiliomurai@gmail.com"
       }
     }
