Add User Context

--- a/FinancialApp.API/appsettings.json
+++ b/FinancialApp.API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Facillita": "Server=tcp:facillita-prod.database.windows.net,1433;Initial Catalog=Facillita;Persist Security Info=False;User ID=DevSA;Password=u%s9E3V&EX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
+    "Facillita": "Server=tcp:facillita.database.windows.net,1433;Initial Catalog=facillita;Persist Security Info=False;User ID=DevSA;Password=u%s9E3V&EX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"FacillitaLocal": "Server=localhost,1433;Database=facillita;User ID=sa;Password=u%s9E3V&EX;Trusted_Connection=False; TrustServerCertificate=True;"
   }
 }
